--- a/date-picker/index.html
+++ b/date-picker/index.html
@@ -10,12 +10,19 @@
 <header>
     <h1 class="title">Current date</h1>
     <p id="current-date"></p>
+
+    <h1 class="title">Change date</h1>
+    <p id="modify-date">Select your date</p>
+
+    <h1 class="title">Difference date</h1>
+    <p id="difference-date">Difference your date</p>
 </header>
 <section class="container">
-    <div class="change-date">
-        <select id="select-date">
-            <option selected disabled> </option>
-        </select>
+    <div class="changed-date">
+        <select id="select-date"></select>
+
+        <button id="compare-date">compare date</button>
+
         <button id="change-date">change date</button>
     </div>
 </section>
