add track time for console

--- a/video-player/index.html
+++ b/video-player/index.html
@@ -10,8 +10,8 @@
 <div class="video-container">
     <video src="video.mp4" controls height="400px" id="video"></video>
     <div class="button-container">
-        <button id="play">play</button>
-        <button id="pause">pause</button>
+        <button id="play-button">play</button>
+        <button id="pause-button">pause</button>
     </div>
 
 </div>
