--- a/video-player/index.html
+++ b/video-player/index.html
@@ -11,8 +11,10 @@
     <video src="video.mp4" controls height="400px" id="video"></video>
     <div class="button-container">
         <button id="play-button">play</button>
+        <button id="rewind-button">rewind</button>
         <button id="pause-button">pause</button>
     </div>
+    <input type="range" min="0" value="0" id="progress-bar">
 
 </div>
 
