added rewind button

--- a/video-player/index.html
+++ b/video-player/index.html
@@ -8,14 +8,13 @@
 </head>
 <body>
 <div class="video-container">
-    <video src="video.mp4" controls height="400px" id="video"></video>
+    <video src="mov_bbb.mp4" controls height="400px" id="video"></video>
     <div class="button-container">
         <button id="play-button">play</button>
         <button id="rewind-button">rewind</button>
         <button id="pause-button">pause</button>
     </div>
     <input type="range" min="0" value="0" id="progress-bar">
-
 </div>
 
 <script src="main.js"></script>
